--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
-
+    testOptions {
+        animationsDisabled = true
+    }
     buildTypes {
         release {
             minifyEnabled false
